Set Dashboard as default repository in ROOT_ROLE Fix Dashboard tweaks: "welcome, userID" , password focus in webdav pane Fix Mobile template and Media queries CSS User Wiget: add a "down arrow" to make more visible the access to the user menu

--- a/core/src/plugins/gui.ajax/res/themes/vision/css/media.css
+++ b/core/src/plugins/gui.ajax/res/themes/vision/css/media.css
@@ -16,9 +16,12 @@ and (max-width : 680px) {
     span.actionbar_button_label,
     .action_bar span.actionbar_button_label,
     #get_my_feed_button_label,
+    #logging_string i,
+    #logging_string *[ajxp_message_id],
+    #global_toolbar span.icon-caret-down,
     #search_form a
     {
-        display: none;
+        display: none !important;
     }
     #simple_repository_label{
         font-size: 16px;
@@ -55,15 +58,6 @@ and (max-width : 400px){
     div.repository_legend{
         display:none;
     }
-    #global_toolbar {
-        background-color: #666;
-        height: 30px;
-        padding: 9px 0 0 5px;
-        background-image: url("../images/white_logo-ajxp.png");
-        background-repeat: no-repeat;
-        background-position: 10px 7px;
-        background-size: 35%;
-    } 
     #search_engine_cont{
         width:15% !important;
     }
